--- a/src/vue/Importation.fxml
+++ b/src/vue/Importation.fxml
@@ -1,24 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox id="container" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.VueHomepageController">
+<VBox id="container" prefHeight="500.0" prefWidth="900.0" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.VueImportationController">
    <children>
       <HBox>
          <children>
@@ -29,49 +19,11 @@
             </Text>
             <HBox alignment="TOP_RIGHT" HBox.hgrow="ALWAYS">
                <children>
-                  <Button fx:id="boutonUtilisateur" mnemonicParsing="false" onAction="#utilisateurPresser" onMouseEntered="#utilisateurEntree" onMouseExited="#utilisateurSortie" styleClass="utilisateur" text="Utilisateur" />
-                  <Line endX="38.0" rotate="90.0" stroke="WHITE" translateY="16.0" />
-                  <HBox spacing="16.0">
-                     <children>
-                        <Button mnemonicParsing="false" onAction="#importerPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="40.0" prefWidth="150.0" styleClass="primary-button" text="IMPORTER" textFill="WHITE">
-                           <font>
-                              <Font name="Verdana Bold" size="12.0" />
-                           </font>
-                           <graphic>
-                              <ImageView pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../vue/ressources/icone_importer.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Button>
-                        <Button mnemonicParsing="false" onAction="#exporterPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="40.0" prefWidth="150.0" styleClass="primary-button" text="EXPORTER" textFill="WHITE">
-                           <font>
-                              <Font name="Verdana Bold" size="12.0" />
-                           </font>
-                           <graphic>
-                              <ImageView pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../vue/ressources/icone_exporter.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Button>
-                     </children>
-                  </HBox>
-                  <Line endX="38.0" rotate="90.0" stroke="WHITE" translateY="16.0" />
-                  <Button mnemonicParsing="false" onAction="#reinitialiserPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" prefHeight="40.0" prefWidth="150.0" styleClass="secondary-button" text="REINITIALISER" textFill="#9555e8">
-                     <font>
-                        <Font name="Verdana Bold" size="12.0" />
-                     </font>
-                     <graphic>
-                        <ImageView pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../vue/ressources/icone_reinitialiser.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
+                  <Button fx:id="boutonUtilisateur" mnemonicParsing="false" onAction="#utilisateurPresser" onMouseEntered="#utilisateurEntree" onMouseExited="#utilisateurSortie" text="Utilisateur">
+                     <styleClass>
+                        <String fx:value="utilisateur" />
+                        <String fx:value="utilisateur-not-hover" />
+                     </styleClass></Button>
                </children>
             </HBox>
          </children>
@@ -83,7 +35,7 @@
             <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
          </padding>
          <children>
-            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="import-button" VBox.vgrow="ALWAYS">
+            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#boutonImporterPresser" onDragDropped="#onDragOver" onDragOver="#onDragDropped" styleClass="import-button" VBox.vgrow="ALWAYS">
                <graphic>
                   <Text fill="#9555e8" strokeType="OUTSIDE" strokeWidth="0.0" text="GLISSER UN FICHIER CSV&#10;&#10;OU&#10;&#10;CLIQUER POUR IMPORTER" textAlignment="CENTER">
                      <font>
